# controllers/proto/api.swagger.json
@@ -81,6 +81,31 @@
         ]
       }
     },
+    "/v1/mirrors/{client_token}": {
+      "get": {
+        "operationId": "Find",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/protoMirror"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "client_token",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "string"
+          }
+        ],
+        "tags": [
+          "MirrorService"
+        ]
+      }
+    },
     "/v1/services": {
       "get": {
         "operationId": "Get",
@@ -128,7 +153,7 @@
       "properties": {
         "id": {
           "type": "integer",
-          "format": "int64"
+          "format": "int32"
         },
         "name": {
           "type": "string",
@@ -137,6 +162,10 @@
         "email": {
           "type": "string",
           "format": "string"
+        },
+        "admin": {
+          "type": "boolean",
+          "format": "boolean"
         }
       }
     },
@@ -187,11 +216,24 @@
           "type": "string",
           "format": "int64"
         },
-        "services": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/protoService"
-          }
+        "service": {
+          "$ref": "#/definitions/protoService"
+        },
+        "service_endpoint": {
+          "$ref": "#/definitions/protoMirror"
+        },
+        "local_destination": {
+          "type": "string",
+          "format": "string"
+        }
+      }
+    },
+    "protoMirrorFindRequest": {
+      "type": "object",
+      "properties": {
+        "client_token": {
+          "type": "string",
+          "format": "string"
         }
       }
     },
